log

Wed 13 Mar 2024 08:31:30 PM UTC: 
 tests:  0|7
total_score: 0/70
1107d68
Wed 13 Mar 2024 09:07:12 PM UTC: 
 exercises.c | 47 +++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 47 insertions(+)
In file included from test.c:1:
exercises.c:13:1: error: expected identifier or ‘(’ before ‘{’ token
   13 | {
      | ^
exercises.c:29:1: error: expected identifier or ‘(’ before ‘{’ token
   29 | {
      | ^
exercises.c:46:1: error: expected identifier or ‘(’ before ‘{’ token
   46 | {
      | ^
exercises.c:78:1: error: expected identifier or ‘(’ before ‘{’ token
   78 | {
      | ^
Compilation failed
bc86b78
Wed 13 Mar 2024 09:09:23 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:1:
exercises.c:28:1: error: expected identifier or ‘(’ before ‘{’ token
   28 | {
      | ^
exercises.c:45:1: error: expected identifier or ‘(’ before ‘{’ token
   45 | {
      | ^
exercises.c:77:1: error: expected identifier or ‘(’ before ‘{’ token
   77 | {
      | ^
Compilation failed
1265e66
Wed 13 Mar 2024 09:10:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c:45:1: error: expected identifier or ‘(’ before ‘{’ token
   45 | {
      | ^
exercises.c:77:1: error: expected identifier or ‘(’ before ‘{’ token
   77 | {
      | ^
Compilation failed
860c813
